--- a/p/pr/pro/prodivnet.com.html
+++ b/p/pr/pro/prodivnet.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the prodivnet.com privacy policy that was archived on 2016-11-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161121141613id_/http%3A//www.prodivnet.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the prodivnet.com privacy policy that was archived on 2017-04-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170423095308id_/http%3A//www.prodivnet.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>ProDivNet.com | Privacy Policy | Diversity Professional Networking and Job Search</title>
@@ -9,9 +9,9 @@
 <meta content="website" property="og:type">
 <meta content="ProDivNet.com | Privacy Policy | Diversity Professional Networking and Job Search" property="og:title">
 <meta content="ProDivNet.com is owned and operated by Professional Diversity Network. Professional Diversity Network is committed to protecting the privacy of our users. In addition to providing our users numerous privacy features, Professional Diversity Network has created this Privacy Statement in order to demonstrate in writing our firm commitment to privacy." property="og:description">
-<meta content="http://www.prodivnet.com//assets/prodivnet/logo-4f38d6897d929dd438e9c5185c18c634.png" property="og:image">
+<meta content="http://www.prodivnet.com/assets/prodivnet/logo-4f38d6897d929dd438e9c5185c18c634.png" property="og:image">
 <meta content="" name="robots">
-<script src="https://js-agent.newrelic.com/nr-998.min.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-5MLK8L"></script><script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script>
+<script src="https://js-agent.newrelic.com/nr-1026.min.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-5MLK8L"></script><script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script>
   
   var googletag = googletag || {};
   googletag.cmd = googletag.cmd || [];
@@ -29,17 +29,17 @@
   }
 </script>
 
-<link href="//dp9aoj9ualutl.cloudfront.net/assets/application-prodivnet-774c8d88d34bdaf2880de83de2f83bf4.css" media="all" rel="stylesheet" type="text/css"><link href="//dp9aoj9ualutl.cloudfront.net/assets/common-215f0799dcbfe55f2e8bd94fd0e6c849.css" media="all" rel="stylesheet" type="text/css"><link href="//dp9aoj9ualutl.cloudfront.net/assets/prodivnet/theme-cbd208118b8ee9a0f4540090181c70af.css" media="all" rel="stylesheet" type="text/css">
+<link href="//dp9aoj9ualutl.cloudfront.net/assets/application-prodivnet-2e22965ee23aaf4b591c6ee762bb541a.css" media="all" rel="stylesheet" type="text/css"><link href="//dp9aoj9ualutl.cloudfront.net/assets/common-215f0799dcbfe55f2e8bd94fd0e6c849.css" media="all" rel="stylesheet" type="text/css"><link href="//dp9aoj9ualutl.cloudfront.net/assets/prodivnet/theme-742a80ed4c82f0994e12d709ef954f36.css" media="all" rel="stylesheet" type="text/css">
 <script src="//dp9aoj9ualutl.cloudfront.net/assets/modernizr-31fcc346255051d665f503bd829f1cc7.js" type="text/javascript"></script>
 <meta content="authenticity_token" name="csrf-param">
-<meta content="eOOkTWj49nvr/ntd0Cb+re14/5j/P1uwiERx/p5xeKA=" name="csrf-token">
+<meta content="4do0p+X1a7svcfqEq17UyJK2y6Si+Lal3fIH9iJ5kJ8=" name="csrf-token">
 <link href="/assets/common/fav_icon.ico" rel="icon" type="image/x-icon">
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="width=device-width" name="viewport">
 <meta content="IE=edge" http-equiv="X-UA-Compatible">
-<script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","errorBeacon":"bam.nr-data.net","licenseKey":"e566b74141","applicationID":"1380337","transactionName":"cF4IEEcNW1tTEUoVFlJFDwdqElZQUxBKFhBaRwcHTD1HWFoKBh8=","queueTime":1,"applicationTime":651,"agent":""}</script>
-<script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function(e,t,n){function r(n){if(!t[n]){var o=t[n]={exports:{}};e[n][0].call(o.exports,function(t){var o=e[n][1][t];return r(o||t)},o,o.exports)}return t[n].exports}if("function"==typeof __nr_require)return __nr_require;for(var o=0;o<n.length;o++)r(n[o]);return r}({1:[function(e,t,n){function r(){}function o(e,t,n){return function(){return i(e,[(new Date).getTime()].concat(u(arguments)),t?null:this,n),t?void 0:this}}var i=e("handle"),a=e(2),u=e(3),c=e("ee").get("tracer"),f=NREUM;"undefined"==typeof window.newrelic&&(newrelic=f);var s=["setPageViewName","setCustomAttribute","setErrorHandler","finished","addToTrace","inlineHit"],l="api-",p=l+"ixn-";a(s,function(e,t){f[t]=o(l+t,!0,"api")}),f.addPageAction=o(l+"addPageAction",!0),f.setCurrentRouteName=o(l+"routeName",!0),t.exports=newrelic,f.interaction=function(){return(new r).get()};var d=r.prototype={createTracer:function(e,t){var n={},r=this,o="function"==typeof t;return i(p+"tracer",[Date.now(),e,n],r),function(){if(c.emit((o?"":"no-")+"fn-start",[Date.now(),r,o],n),o)try{return t.apply(this,arguments)}finally{c.emit("fn-end",[Date.now()],n)}}}};a("setName,setAttribute,save,ignore,onEnd,getContext,end,get".split(","),function(e,t){d[t]=o(p+t)}),newrelic.noticeError=function(e){"string"==typeof e&&(e=new Error(e)),i("err",[e,(new Date).getTime()])}},{}],2:[function(e,t,n){function r(e,t){var n=[],r="",i=0;for(r in e)o.call(e,r)&&(n[i]=t(r,e[r]),i+=1);return n}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],3:[function(e,t,n){function r(e,t,n){t||(t=0),"undefined"==typeof n&&(n=e?e.length:0);for(var r=-1,o=n-t||0,i=Array(o<0?0:o);++r<o;)i[r]=e[t+r];return i}t.exports=r},{}],ee:[function(e,t,n){function r(){}function o(e){function t(e){return e&&e instanceof r?e:e?c(e,u,i):i()}function n(n,r,o){if(!p.aborted){e&&e(n,r,o);for(var i=t(o),a=v(n),u=a.length,c=0;c<u;c++)a[c].apply(i,r);var f=s[w[n]];return f&&f.push([y,n,r,i]),i}}function d(e,t){b[e]=v(e).concat(t)}function v(e){return b[e]||[]}function g(e){return l[e]=l[e]||o(n)}function m(e,t){f(e,function(e,n){t=t||"feature",w[n]=t,t in s||(s[t]=[])})}var b={},w={},y={on:d,emit:n,get:g,listeners:v,context:t,buffer:m,abort:a,aborted:!1};return y}function i(){return new r}function a(){(s.api||s.feature)&&(p.aborted=!0,s=p.backlog={})}var u="nr@context",c=e("gos"),f=e(2),s={},l={},p=t.exports=o();p.backlog=s},{}],gos:[function(e,t,n){function r(e,t,n){if(o.call(e,t))return e[t];var r=n();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,t,{value:r,writable:!0,enumerable:!1}),r}catch(i){}return e[t]=r,r}var o=Object.prototype.hasOwnProperty;t.exports=r},{}],handle:[function(e,t,n){function r(e,t,n,r){o.buffer([e],r),o.emit(e,t,n)}var o=e("ee").get("handle");t.exports=r,r.ee=o},{}],id:[function(e,t,n){function r(e){var t=typeof e;return!e||"object"!==t&&"function"!==t?-1:e===window?0:a(e,i,function(){return o++})}var o=1,i="nr@id",a=e("gos");t.exports=r},{}],loader:[function(e,t,n){function r(){if(!h++){var e=y.info=NREUM.info,t=l.getElementsByTagName("script")[0];if(setTimeout(f.abort,3e4),!(e&&e.licenseKey&&e.applicationID&&t))return f.abort();c(b,function(t,n){e[t]||(e[t]=n)}),u("mark",["onload",a()],null,"api");var n=l.createElement("script");n.src="https://"+e.agent,t.parentNode.insertBefore(n,t)}}function o(){"complete"===l.readyState&&i()}function i(){u("mark",["domContent",a()],null,"api")}function a(){return(new Date).getTime()}var u=e("handle"),c=e(2),f=e("ee"),s=window,l=s.document,p="addEventListener",d="attachEvent",v=s.XMLHttpRequest,g=v&&v.prototype;NREUM.o={ST:setTimeout,CT:clearTimeout,XHR:v,REQ:s.Request,EV:s.Event,PR:s.Promise,MO:s.MutationObserver},e(1);var m=""+location,b={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-998.min.js"},w=v&&g&&g[p]&&!/CriOS/.test(navigator.userAgent),y=t.exports={offset:a(),origin:m,features:{},xhrWrappable:w};l[p]?(l[p]("DOMContentLoaded",i,!1),s[p]("load",r,!1)):(l[d]("onreadystatechange",o),s[d]("onload",r)),u("mark",["firstbyte",a()],null,"api");var h=0},{}]},{},["loader"]);</script>
+<script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","errorBeacon":"bam.nr-data.net","licenseKey":"e566b74141","applicationID":"1380337","transactionName":"cF4IEEcNW1tTEUoVFlJFDwdqElZQUxBKFhBaRwcHTD1HWFoKBh8=","queueTime":1,"applicationTime":259,"agent":""}</script>
+<script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function(e,n,t){function r(t){if(!n[t]){var o=n[t]={exports:{}};e[t][0].call(o.exports,function(n){var o=e[t][1][n];return r(o||n)},o,o.exports)}return n[t].exports}if("function"==typeof __nr_require)return __nr_require;for(var o=0;o<t.length;o++)r(t[o]);return r}({1:[function(e,n,t){function r(){}function o(e,n,t){return function(){return i(e,[c.now()].concat(u(arguments)),n?null:this,t),n?void 0:this}}var i=e("handle"),a=e(2),u=e(3),f=e("ee").get("tracer"),c=e("loader"),s=NREUM;"undefined"==typeof window.newrelic&&(newrelic=s);var p=["setPageViewName","setCustomAttribute","setErrorHandler","finished","addToTrace","inlineHit","addRelease"],d="api-",l=d+"ixn-";a(p,function(e,n){s[n]=o(d+n,!0,"api")}),s.addPageAction=o(d+"addPageAction",!0),s.setCurrentRouteName=o(d+"routeName",!0),n.exports=newrelic,s.interaction=function(){return(new r).get()};var m=r.prototype={createTracer:function(e,n){var t={},r=this,o="function"==typeof n;return i(l+"tracer",[c.now(),e,t],r),function(){if(f.emit((o?"":"no-")+"fn-start",[c.now(),r,o],t),o)try{return n.apply(this,arguments)}finally{f.emit("fn-end",[c.now()],t)}}}};a("setName,setAttribute,save,ignore,onEnd,getContext,end,get".split(","),function(e,n){m[n]=o(l+n)}),newrelic.noticeError=function(e){"string"==typeof e&&(e=new Error(e)),i("err",[e,c.now()])}},{}],2:[function(e,n,t){function r(e,n){var t=[],r="",i=0;for(r in e)o.call(e,r)&&(t[i]=n(r,e[r]),i+=1);return t}var o=Object.prototype.hasOwnProperty;n.exports=r},{}],3:[function(e,n,t){function r(e,n,t){n||(n=0),"undefined"==typeof t&&(t=e?e.length:0);for(var r=-1,o=t-n||0,i=Array(o<0?0:o);++r<o;)i[r]=e[n+r];return i}n.exports=r},{}],4:[function(e,n,t){n.exports={exists:"undefined"!=typeof window.performance&&window.performance.timing&&"undefined"!=typeof window.performance.timing.navigationStart}},{}],ee:[function(e,n,t){function r(){}function o(e){function n(e){return e&&e instanceof r?e:e?f(e,u,i):i()}function t(t,r,o,i){if(!d.aborted||i){e&&e(t,r,o);for(var a=n(o),u=m(t),f=u.length,c=0;c<f;c++)u[c].apply(a,r);var p=s[y[t]];return p&&p.push([b,t,r,a]),a}}function l(e,n){v[e]=m(e).concat(n)}function m(e){return v[e]||[]}function w(e){return p[e]=p[e]||o(t)}function g(e,n){c(e,function(e,t){n=n||"feature",y[t]=n,n in s||(s[n]=[])})}var v={},y={},b={on:l,emit:t,get:w,listeners:m,context:n,buffer:g,abort:a,aborted:!1};return b}function i(){return new r}function a(){(s.api||s.feature)&&(d.aborted=!0,s=d.backlog={})}var u="nr@context",f=e("gos"),c=e(2),s={},p={},d=n.exports=o();d.backlog=s},{}],gos:[function(e,n,t){function r(e,n,t){if(o.call(e,n))return e[n];var r=t();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,n,{value:r,writable:!0,enumerable:!1}),r}catch(i){}return e[n]=r,r}var o=Object.prototype.hasOwnProperty;n.exports=r},{}],handle:[function(e,n,t){function r(e,n,t,r){o.buffer([e],r),o.emit(e,n,t)}var o=e("ee").get("handle");n.exports=r,r.ee=o},{}],id:[function(e,n,t){function r(e){var n=typeof e;return!e||"object"!==n&&"function"!==n?-1:e===window?0:a(e,i,function(){return o++})}var o=1,i="nr@id",a=e("gos");n.exports=r},{}],loader:[function(e,n,t){function r(){if(!x++){var e=h.info=NREUM.info,n=d.getElementsByTagName("script")[0];if(setTimeout(s.abort,3e4),!(e&&e.licenseKey&&e.applicationID&&n))return s.abort();c(y,function(n,t){e[n]||(e[n]=t)}),f("mark",["onload",a()+h.offset],null,"api");var t=d.createElement("script");t.src="https://"+e.agent,n.parentNode.insertBefore(t,n)}}function o(){"complete"===d.readyState&&i()}function i(){f("mark",["domContent",a()+h.offset],null,"api")}function a(){return E.exists&&performance.now?Math.round(performance.now()):(u=Math.max((new Date).getTime(),u))-h.offset}var u=(new Date).getTime(),f=e("handle"),c=e(2),s=e("ee"),p=window,d=p.document,l="addEventListener",m="attachEvent",w=p.XMLHttpRequest,g=w&&w.prototype;NREUM.o={ST:setTimeout,CT:clearTimeout,XHR:w,REQ:p.Request,EV:p.Event,PR:p.Promise,MO:p.MutationObserver};var v=""+location,y={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-1026.min.js"},b=w&&g&&g[l]&&!/CriOS/.test(navigator.userAgent),h=n.exports={offset:u,now:a,origin:v,features:{},xhrWrappable:b};e(1),d[l]?(d[l]("DOMContentLoaded",i,!1),p[l]("load",r,!1)):(d[m]("onreadystatechange",o),p[m]("onload",r)),f("mark",["firstbyte",u],null,"api");var x=0,E=e(4)},{}]},{},["loader"]);</script>
 
 
 <!--[if lt IE 9]>
@@ -48,10 +48,10 @@
 <![endif]-->
 </head>
 
-<body class="static_pages static_pages_privacy_policy static_pages_privacy_policy_loggedout " data-status="logged_out">
+<body class="prodivnet static_pages static_pages_privacy_policy static_pages_privacy_policy_loggedout " data-status="logged_out">
 <script type="text/javascript">
 //<![CDATA[
-(typeof dataLayer === 'undefined') ? dataLayer = [{"logged_in":"false","google_id":"UA-410278-45","tracking_uuid":"9781735d-4fdb-4a85-9b18-0daaf48f04cd"}] : dataLayer.concat([{"logged_in":"false","google_id":"UA-410278-45","tracking_uuid":"9781735d-4fdb-4a85-9b18-0daaf48f04cd"}]);
+(typeof dataLayer === 'undefined') ? dataLayer = [{"logged_in":"false","google_id":"UA-410278-45","tracking_uuid":"3c6627fa-f1eb-40bb-a67d-ff2ad877412b"}] : dataLayer.concat([{"logged_in":"false","google_id":"UA-410278-45","tracking_uuid":"3c6627fa-f1eb-40bb-a67d-ff2ad877412b"}]);
 
 //]]>
 </script><!-- Google Tag Manager -->
@@ -85,7 +85,7 @@ Skip Navigation
 <span><img alt="Professional Diversity Network" src="//dp9aoj9ualutl.cloudfront.net/assets/prodivnet/logo-4f38d6897d929dd438e9c5185c18c634.png"></span>
 </div>
 <div class="hidden-desktop">
-<img alt="Professional Diversity Network" src="//dp9aoj9ualutl.cloudfront.net/assets/prodivnet/main_logo-2787ae79437d4d5498d886b48c0b150c.png">
+<img alt="Professional Diversity Network" src="//dp9aoj9ualutl.cloudfront.net/assets/prodivnet/mobile_logo-cc37a8a8fe323bfeeeaba5374b20629f.png">
 </div>
 </a>
 <ul aria-labelledby="site_dropdown" class="collapse" role="menu">
@@ -95,17 +95,17 @@ Skip Navigation
 </div>
 </div>
 
-<div class="hidden-desktop pull-right header-icons mobile-search">
+<div class="hidden-desktop pull-right header-icons-right mobile-search">
 <a data-target="section#search-bar" data-toggle="collapse" href="#">
-<span>
-Search
+<span class="search">
+<i class="icons-search"></i>
 </span>
 </a>
 </div>
 <nav id="navigation-bar">
 <ul>
 <li class="menu_link" id="jobs_link">
-<a href="/job-summaries?location=Wilmington%2C+DE" class="effect">Jobs</a>
+<a href="/job-summaries?location=San+Francisco%2C+CA" class="effect">Jobs</a>
 </li>
 <li class="menu_link" id="people_link">
 <a class="effect" href="/people">
@@ -123,7 +123,7 @@ Blog
 </a>
 </li>
 <li class="menu_link" id="events_link">
-<a href="/events" class="effect">Events</a>
+<a href="/events" class="effect">Career Events</a>
 </li>
 <li class="menu_link" id="login_link">
 <a href="/login" class="effect" rel="nofollow">Login</a>
@@ -455,7 +455,7 @@ If you have further questions about our Sites, our products or services, or our 
 </div>
 </div>
 </div>
-<script src="//dp9aoj9ualutl.cloudfront.net/assets/application-d79f5c9e2d95e362326d69a5e8c3761a.js" type="text/javascript"></script>
+<script src="//dp9aoj9ualutl.cloudfront.net/assets/application-3ed58a3e8e5f67136f3074f50dc562d3.js" type="text/javascript"></script>
 <div class="clearfix"></div>
 <footer id="footer">
 <div class="centered">
@@ -510,7 +510,7 @@ FOR EMPLOYERS
 </li>
 </ul>
 <ul class="contact">
-<li class="copyright">©2016 Professional Diversity Network</li>
+<li class="copyright">©2017 Professional Diversity Network</li>
 <li class="contact-number">888-281-9066</li>
 <li class="contact-email"><a href="http://support.prodivnet.com/customer/portal/emails/new">Email Us</a></li>
 <li class="social-media-links">
