--- a/9/99/999/999gag.com.html
+++ b/9/99/999/999gag.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 999gag.com privacy policy that was archived on 2016-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161219101723id_/http%3A//www.999gag.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 999gag.com privacy policy that was archived on 2017-04-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170424071241id_/http%3A//999gag.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml"><head>    
     <title>Privacy Policy - 999gag.com </title>
