--- a/p/pl/pla/placementyogi.com.html
+++ b/p/pl/pla/placementyogi.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the placementyogi.com privacy policy that was archived on 2016-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161220121933id_/http%3A//placementyogi.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the placementyogi.com privacy policy that was archived on 2017-04-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170424081553id_/http%3A//www.placementyogi.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml"><head id="Head1"><title>
 
