--- a/e/ec/eca/ecards.co.uk.html
+++ b/e/ec/eca/ecards.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ecards.co.uk privacy policy that was archived on 2016-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161212094847id_/http%3A//www.ecards.co.uk/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ecards.co.uk privacy policy that was archived on 2017-04-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170424114727id_/http%3A//www.ecards.co.uk/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en-gb"><head>
 
@@ -603,12 +603,14 @@
   
 <div class="content" style="padding-bottom: 0px; box-shadow: none;">
 <div class="container">
-  <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <!-- Top Banner -->
-  <ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-8754979225546419" data-ad-slot="3849071683"></ins>
-  <script>
-  (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
+
+<!-- START ADVERTISER: RAC from affiliatewindow.com -->
+
+<a href="https://www.awin1.com/cread.php?s=612413&amp;v=3790&amp;q=302913&amp;r=35034">
+    <img src="https://www.awin1.com/cshow.php?s=612413&amp;v=3790&amp;q=302913&amp;r=35034" border="0">
+</a>
+
+<!-- END ADVERTISER: RAC from affiliatewindow.com -->
 </div>
 </div>
 
