--- a/t/tr/tra/traffkings.com.html
+++ b/t/tr/tra/traffkings.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the traffkings.com privacy policy that was archived on 2016-12-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161208062532id_/http%3A//www.traffkings.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the traffkings.com privacy policy that was archived on 2017-04-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170424121503id_/http%3A//traffkings.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>Adshort Lite</title>
