--- a/t/tr/try/trymyui.com.html
+++ b/t/tr/try/trymyui.com.html
@@ -1,7 +1,22 @@
-<!--The following is the downloaded HTML source of the trymyui.com privacy policy that was archived on 2016-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161119084132id_/http%3A//www.trymyui.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the trymyui.com privacy policy that was archived on 2017-04-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170424174129id_/http%3A//www.trymyui.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" id="Try My Ui" lang="en"><head>
+    <script async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://player.trymyui.com/js/dist/trackmyui.all.js?ts=1582534621338"></script><script type="text/javascript" id="__tmyui_script">
+        window.__trymyui_website_id = 2;
+        var bs = window.__tmyui_base = "http://player.trymyui.com/js/";
+        window.__tmyui_start_ts = new Date();
+        var ts = new Date().getTime();
+        (function() {
+            function le (oError) {throw new URIError("The script " + oError.target.src + " is not accessible.");}
+            function ls(url, cb){
+                url = url.replace('http:', document.location.protocol);
+                var d = document,wa = d.createElement('script');wa.type = 'text/javascript'; wa.async = true;wa.onerror = le;if (cb) { wa.onload = cb; }
+                wa.src = url;var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(wa, s);
+            }
+            ls(bs + "dist/trackmyui.all.js?ts="+ts);
+        })();
+    </script>
   <!-- These are the metatags associated with sharing a gtest. They are defined with in the grog test view if defined.  -->
   
 
@@ -21,15 +36,15 @@
 
 
   <meta property="og:type" content="website">
-  <meta property="og:url" content="http://www.trymyui.com">
+  <meta property="og:url" content="https://www.trymyui.com">
   <meta property="og:image" content="/assets/home/logo-header-b.png">
   <meta property="og:site_name" content="TryMyUI">
     <meta property="og:title" content="Get paid to review websites - really.">
     <meta property="og:description" content="TryMyUI makes it affordable and easy for website developers to understand how real users interact with their websites by capturing narrated videos of these users performing designated tasks.  Be a tester and get paid for providing this feedback. It's easy and fun.">
 
 
-  <link href="/assets/application-31112ec100288f9cd913aef9cd12a99c.css" media="screen" rel="stylesheet" type="text/css">
-  <script async="" src="https://www.google-analytics.com/analytics.js"></script><script src="/assets/application-01cbc2147f49d66ec7f0654c37b4c73a.js" type="text/javascript"></script>
+  <link href="/assets/application-6b221fd541f78c63371d5cea64406354.css" media="screen" rel="stylesheet" type="text/css">
+  <script src="/assets/application-2f8df142ab3f12a4ef420c0303643053.js" type="text/javascript"></script>
 
 
   
@@ -38,7 +53,7 @@
   
 
   <meta content="authenticity_token" name="csrf-param">
-<meta content="Fqig8ipB/JQH/7dQZNbkrFg8Kw1kZzpqijiXnqlFdIA=" name="csrf-token">
+<meta content="9GNgzjmAvMow1v3QrKHLxHmDK91/kqJzwgii9LdvKFE=" name="csrf-token">
 
   <!-- Google Analytics Tracking -->
 <script>
@@ -71,7 +86,7 @@
 </script>
 -->
 
-<link href="/assets/app-6d701611d98cf501e085f224c4edf6f5.css" media="screen" rel="stylesheet" type="text/css"><link href="/assets/styles-0f424f55258ee084882c0f6204d0eb72.css" media="screen" rel="stylesheet" type="text/css"><link href="/assets/style_new-e9f41c32e481db6b1908c67247bed0cd.css" media="screen" rel="stylesheet" type="text/css"><link href="/assets/css-5403e5fa936cc0ddf5c09702ac6236f9.css" media="screen" rel="stylesheet" type="text/css"></head>
+<link href="/assets/app-785880740069b9548b80cffe87384060.css" media="screen" rel="stylesheet" type="text/css"><link href="/assets/styles-0f424f55258ee084882c0f6204d0eb72.css" media="screen" rel="stylesheet" type="text/css"><link href="/assets/style_new-e9f41c32e481db6b1908c67247bed0cd.css" media="screen" rel="stylesheet" type="text/css"><link href="/assets/css-5403e5fa936cc0ddf5c09702ac6236f9.css" media="screen" rel="stylesheet" type="text/css"></head>
 
 
 
@@ -79,7 +94,7 @@
 
 
 <body class="page page-template group-blog page-template-left-sidebar-template page-template-left-sidebar-template-php">
-  <script src="/assets/jquery-1.9.1-43049d97d87c4b5a5db82905f0c652c4.js" type="text/javascript"></script>
+  <script src="/assets/jquery-1.9.1-e1d197166facefce83d351a274f25fbf.js" type="text/javascript"></script>
 <!-- Overlay divs -->
 <div id="lightOverlay" class="white_content" style="display:none"></div>
 <div id="darkBackground" class="black_overlay" style="display:none"></div>
@@ -217,13 +232,13 @@
     </section>
   </div>
 </article>
-
   </main><!-- #main -->
 </div><!-- #primary -->
 
 <!-- Partners scroll bar in edu page. -->
 
-  <div class="column medium-3 small-12 sidebar-tmui-wrap full-height">
+  
+<div class="column medium-3 small-12 sidebar-tmui-wrap full-height">
   <div id="secondary" class="widget-area" role="complementary">
     <aside id="text-2" class="widget widget_text">
       <div class="textwidget"><!-- widget - sidebar content -->
@@ -249,6 +264,14 @@
     </aside>
   </div><!-- #secondary -->
 </div>
+
+
+<style type="text/css">
+  .feature-full-height {
+    display: block;
+    height: 591em;
+  }
+</style>
 
 </div>
 
@@ -447,7 +470,7 @@
     </div>
     <div class="column medium-6 small-12 tar">
       <span class="footer-bottom-right">
-        ©2016
+        ©2017
         <a href="/">TryMyUI.</a>
       </span>
     </div>
